--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
                 opacity: 1;
             }
         }
+
+        .image-wrapper {
+            transition: transform 0.3s ease;
+        }
+
+        .image-wrapper:hover {
+            transform: scale(1.05);
+        }
     </style>
 </head>
 
